[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Themes/grey_inner_theme.tres" type="Theme" id=1]
[ext_resource path="res://Screens/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/logo_memoji_80.png" type="Texture" id=3]
[ext_resource path="res://Assets/Emojis/symbols/punctuation/203c.png" type="Texture" id=4]
[ext_resource path="res://Screens/Elements/ErrorPopup.tscn" type="PackedScene" id=5]

[node name="TitleScreenPanel" type="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Mouse", "Theme" ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="TitleContainer" type="CenterContainer" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 126.0
margin_right = 240.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
use_top_left = false
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="TitleTexture" type="TextureRect" parent="VBoxContainer/TitleContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 5
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 4
_sections_unfolded = [ "Size Flags" ]

[node name="InstructionsLabel" type="Label" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 257.0
margin_right = 480.0
margin_bottom = 285.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 9
text = "Enter Room Code below"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="RoomCodeLineEdit" type="LineEdit" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 176.0
margin_top = 289.0
margin_right = 304.0
margin_bottom = 321.0
rect_min_size = Vector2( 128, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 2
align = 1
max_length = 4
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="JoinButton" type="Button" parent="VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 176.0
margin_top = 649.0
margin_right = 304.0
margin_bottom = 697.0
rect_min_size = Vector2( 128, 48 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 6
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Join!"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="ConnectingLabel" type="Label" parent="." index="1"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -14.0
margin_right = 139.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Connecting to server..."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NotificationContainer" type="MarginContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 0
custom_constants/margin_top = 8
custom_constants/margin_left = 8

[node name="ReconnectNotification" type="Button" parent="NotificationContainer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 92.0
margin_bottom = 92.0
rect_min_size = Vector2( 84, 84 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = false
align = 1
_sections_unfolded = [ "Hint" ]

[node name="ServerErrorPopup" parent="." index="3" instance=ExtResource( 5 )]

visible = false
label_text = "Cannot connect to server."

[node name="RoomCodeInvalidLengthPopup" parent="." index="4" instance=ExtResource( 5 )]

visible = false
label_text = "Room Code must be 4 letters."

[node name="RoomCodeInvalidCharacters" parent="." index="5" instance=ExtResource( 5 )]

visible = false
label_text = "Room Code may only contain letters."

[node name="ReconnectPopup" type="PopupPanel" parent="." index="6"]

editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -109.5
margin_right = 212.0
margin_bottom = 109.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Rect" ]

[node name="MarginContainer" type="MarginContainer" parent="ReconnectPopup" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
_sections_unfolded = [ "custom_constants" ]

[node name="VBoxContainer" type="VBoxContainer" parent="ReconnectPopup/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 16.0
margin_right = 408.0
margin_bottom = 203.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="ReconnectLabel" type="Label" parent="ReconnectPopup/MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 392.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "It looks like you quit your last game unexpectedly."
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="ReconnectLabel2" type="Label" parent="ReconnectPopup/MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 63.0
margin_right = 392.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Attempt to reconnect?"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="ReconnectPopup/MarginContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 123.0
margin_right = 392.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 10
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="YesReconnectButton" type="Button" parent="ReconnectPopup/MarginContainer/VBoxContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 96.0
margin_bottom = 64.0
rect_min_size = Vector2( 96, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Yes"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="NoReconnectButton" type="Button" parent="ReconnectPopup/MarginContainer/VBoxContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 296.0
margin_right = 392.0
margin_bottom = 64.0
rect_min_size = Vector2( 96, 64 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 10
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "No"
flat = false
align = 1
_sections_unfolded = [ "Rect", "Size Flags" ]

[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]

[connection signal="pressed" from="NotificationContainer/ReconnectNotification" to="." method="_on_ReconnectNotification_pressed"]

[connection signal="popup_hide" from="ReconnectPopup" to="." method="_on_ReconnectPopup_popup_hide"]

[connection signal="pressed" from="ReconnectPopup/MarginContainer/VBoxContainer/HBoxContainer/YesReconnectButton" to="." method="_on_YesReconnectButton_pressed"]

[connection signal="pressed" from="ReconnectPopup/MarginContainer/VBoxContainer/HBoxContainer/NoReconnectButton" to="." method="_on_NoReconnectButton_pressed"]


